--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Forum</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>Форум</h1>
+
+ <%= Article.public_count %> articles
+
+<ul>
+  <% @articles.each do |article| %>
+    <% unless article.archived? %>
+      <li>
+        <%= link_to article.title, article %>
+      </li>
+    <% end %>
+  <% end %>
+</ul>
+
+<%= link_to "New Article", new_article_path %>
