--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,61 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'%>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <div class="d-flex" id="wrapper">
+    <!-- Sidebar-->
+    <div class="border-end bg-white" id="sidebar-wrapper">
+      <div class="sidebar-heading border-bottom bg-light">ОСББ ТКЗ-6</div>
+      <div class="list-group list-group-flush">
+        <span class="list-group-item list-group-item-action list-group-item-light p-3"> <%= link_to "Головна", home_path %></span>
+        <span class="list-group-item list-group-item-action list-group-item-light p-3"> <%= link_to "Про нас", documents_path %></span>
+        <span class="list-group-item list-group-item-action list-group-item-light p-3"> <%= link_to "Форум", articles_path %></span>
+        <span class="list-group-item list-group-item-action list-group-item-light p-3"> <%= link_to "Відеонагляд", video_path %></span>
+
+        <!--        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>     -->
+      </div>
+    </div>
+    <!-- Page content wrapper-->
+    <div id="page-content-wrapper">
+      <!-- Top navigation-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+        <div class="container-fluid">
+          <button class="btn btn-primary" id="sidebarToggle">Меню</button>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+              <li class="nav-item active"><span class="nav-link"> <%= link_to "Увійти", login_path %></span></li>
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+
+              </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Page content-->
+      <div class="container-fluid">
+        <p><%= yield %></p>
+        <p>
+          Make sure to keep all page content within the
+          <code>#page-content-wrapper</code>
+          . The top navbar is optional, and just for demonstration. Just create an element with the
+          <code>#sidebarToggle</code>
+          ID which will toggle the menu when clicked.
+
+      </div>
+    </div>
+  </div>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="javascript/scripts.js"></script>
+
   </body>
 </html>
