--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+              <li class="nav-item active"><span class="link"> <%= link_to "admin", appartments_path %></span></li>
               <li class="nav-item active"><span class="nav-link"> <%= link_to "Увійти", login_path %></span></li>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 
@@ -44,14 +45,10 @@
         </div>
       </nav>
       <!-- Page content-->
-      <div class="container-fluid">
+      <div class="container">
         <p><%= yield %></p>
+        -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
         <p>
-          Make sure to keep all page content within the
-          <code>#page-content-wrapper</code>
-          . The top navbar is optional, and just for demonstration. Just create an element with the
-          <code>#sidebarToggle</code>
-          ID which will toggle the menu when clicked.
 
       </div>
     </div>
