--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Форум</h1>
 
- <%= Article.public_count %> articles
+ <%= Article.public_count %>  message
 
 <ul>
   <% @articles.each do |article| %>
@@ -12,4 +12,4 @@
   <% end %>
 </ul>
 
-<%= link_to "New Article", new_article_path %>
+<%= link_to "Нове повідомлення", new_article_path %>
