--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,28 +1,16 @@
-<h1><%= @article.title %></h1>
+<h2><%= @article.title %></h2>
 
 <p><%= @article.body %></p>
 
 <ul>
-  <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li><%= link_to "Destroy", article_path(@article),
+  <li><%= link_to "Редагувати", edit_article_path(@article) %></li>
+  <li><%= link_to "Видалити", article_path(@article),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %></li>
 </ul>
 
-<h2>Comments</h2>
+<h3>Коментарі</h3>
 <%= render @article.comments %>
 
-<h2>Add a comment:</h2>
-<%= form_with model: [ @article, @article.comments.build ] do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<h5>Додати коментар:</h5>
+<%= render 'comments/form' %>
