--- a/app/views/appartments/edit.html.erb
+++ b/app/views/appartments/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Редагувати квартиру</h1>
+<h1>Редагувати</h1>
 
-<%= render "form", appartment.@appartment %>
+<%= render "form", appartment: @appartment %>
