--- a/app/views/residents/_form.html.erb
+++ b/app/views/residents/_form.html.erb
@@ -1,19 +1,69 @@
 <%= form_with model: resident do |form| %>
   <div>
-    <%= form.label :resident%><br>
-    <%= form.text_field(:resident,{:class => 'form-control'}) %>
+    <%= form.label :'Номер квартири'%><br>
+    <%= form.text_field(:appartm,{:class => 'form-control'}) %>
     <% resident.errors.full_messages_for(:appartm).each do |message| %>
       <div class="alert alert-danger"><%= message %></div>
     <% end %>
   </div>
 
   <div>
-    <%= form.label :name %><br>
-    <%= form.text_area(:name,{:class => 'form-control'})%><br>
+    <%= form.label :'Прізвіще' %><br>
+    <%= form.text_field(:name,{:class => 'form-control'})%><br>
     <% resident.errors.full_messages_for(:name).each do |message| %>
       <div class="alert alert-danger"><%= message %></div>
     <% end %>
   </div>
+  <div>
+    <%= form.label :"Ім'я" %><br>
+    <%= form.text_field(:lastname,{:class => 'form-control'})%><br>
+    <% resident.errors.full_messages_for(:lastname).each do |message| %>
+      <div class="alert alert-danger"><%= message %></div>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.label :'По батькові' %><br>
+    <%= form.text_field(:surname,{:class => 'form-control'})%><br>
+    <% resident.errors.full_messages_for(:surname).each do |message| %>
+      <div class="alert alert-danger"><%= message %></div>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.label :'Телефон' %><br>
+    <%= form.text_field(:telephone,{:class => 'form-control'})%><br>
+    <% resident.errors.full_messages_for(:telephone).each do |message| %>
+      <div class="alert alert-danger"><%= message %></div>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.label :'День народження' %><br>
+    <%= form.text_field(:birthday,{:class => 'form-control'})%><br>
+    <% resident.errors.full_messages_for(:birthday).each do |message| %>
+      <div class="alert alert-danger"><%= message %></div>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.label :'Чи є власником квартири?' %><br>
+    <%= form.text_field(:owner,{:class => 'form-control'})%><br>
+    <% resident.errors.full_messages_for(:owner).each do |message| %>
+      <div class="alert alert-danger"><%= message %></div>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.label :'Чи є орендарем квартири?' %><br>
+    <%= form.text_field(:tenant,{:class => 'form-control'})%><br>
+    <% resident.errors.full_messages_for(:tenant).each do |message| %>
+      <div class="alert alert-danger"><%= message %></div>
+    <% end %>
+  </div>
+
+
+
 
   <div>
     <%= form.submit ({:class => 'btn btn-success'})%>
