--- a/app/views/residents/_form.html.erb
+++ b/app/views/residents/_form.html.erb
@@ -1,14 +1,11 @@
 <%= form_with model: resident do |form| %>
   <div>
     <%= form.label :'Номер квартири'%><br>
-    <%= form.text_field(:appartm,{:class => 'form-control'}) %>
-    <% resident.errors.full_messages_for(:appartm).each do |message| %>
-      <div class="alert alert-danger"><%= message %></div>
-    <% end %>
+    <%= form.number_field :appartm, in: 1..77%>
   </div>
 
   <div>
-    <%= form.label :'Прізвіще' %><br>
+    <%= form.label :'Прізвище' %><br>
     <%= form.text_field(:name,{:class => 'form-control'})%><br>
     <% resident.errors.full_messages_for(:name).each do |message| %>
       <div class="alert alert-danger"><%= message %></div>
@@ -45,7 +42,7 @@
 
   <div>
     <%= form.label :'Чи є власником квартири?' %><br>
-    <%= form.check_box ( :owner) %><br>
+    <%= form.check_box( :owner) %><br>
   </div>
 
   <div>
