--- a/app/views/residents/_form.html.erb
+++ b/app/views/residents/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: resident do |form| %>
   <div>
-    <%= form.label :'Номер квартири'%><br>
+    <%= form.label :'№ квартири'%><br>
     <%= form.number_field :appartm, in: 1..77%>
   </div>
 
