--- a/app/views/appartments/_form.html.erb
+++ b/app/views/appartments/_form.html.erb
@@ -1,42 +1,28 @@
 <%= form_with model: appartment do |form| %>
+
   <div>
-    <%= form.label :'Номер квартири'%><br>
-    <%= form.text_field(:appartm,{:class => 'form-control'}) %>
-    <% appartment.errors.full_messages_for(:appartm).each do |message| %>
-      <div class="alert alert-danger"><%= message %></div>
-    <% end %>
+    <%= form.label :'№ квартири'%><br>
+    <%= form.number_field :appartm, in: 1..77%>
   </div>
 
   <div>
     <%= form.label :'Площа квартири' %><br>
-    <%= form.text_field(:area_apprtmnt,{:class => 'form-control'})%><br>
-    <% appartment.errors.full_messages_for(:area_apprtmnt).each do |message| %>
-      <div class="alert alert-danger"><%= message %></div>
-    <% end %>
+    <%= form.number_field :area_apprtmnt, in:25.0..150.0%><br>
   </div>
 
   <div>
     <%= form.label :'Показник лічильніка води' %><br>
-    <%= form.text_field(:previus_water,{:class => 'form-control'})%><br>
-    <% appartment.errors.full_messages_for(:previus_water).each do |message| %>
-      <div class="alert alert-danger"><%= message %></div>
-    <% end %>
+    <%= form.number_field :previus_water, in: 1.0..99999.0%><br>
   </div>
 
   <div>
     <%= form.label :'Показник лічильніка електроенергії' %><br>
-    <%= form.text_field(:previus_electricity,{:class => 'form-control'})%><br>
-    <% appartment.errors.full_messages_for(:previus_electricity).each do |message| %>
-      <div class="alert alert-danger"><%= message %></div>
-    <% end %>
+    <%= form.number_field :previus_electricity, in: 1.0..99999.0%><br>
   </div>
 
   <div>
     <%= form.label :'Заборгованість' %><br>
-    <%= form.text_field(:arears,{:class => 'form-control'})%><br>
-    <% appartment.errors.full_messages_for(:arears).each do |message| %>
-      <div class="alert alert-danger"><%= message %></div>
-    <% end %>
+    <%= form.number_field :arears, in: 1.0..9999.0%><br>
   </div>
 
 
