--- a/app/views/appartments/index.html.erb
+++ b/app/views/appartments/index.html.erb
@@ -4,7 +4,7 @@
 <ul>
   <% @appartments .each do |appartment| %>
     <li>
-      <%= appartment.appartm %> '<%= appartment.owner_id %>' <%= appartment.area_apprtmnt %> <%= appartment.previus_water %> <%= appartment.previus_electricity %> <%= appartment.update_water %> <%= appartment.update_electricity %> <%= appartment.arears%>
+      <%= link_to appartment.appartm, appartment %> '<%= appartment.owner_id %>' <%= appartment.area_apprtmnt %> <%= appartment.previus_water %> <%= appartment.previus_electricity %> <%= appartment.update_water %> <%= appartment.update_electricity %> <%= appartment.arears%>
     </li>
   <% end %>
 </ul>
