--- a/app/views/residents/index.html.erb
+++ b/app/views/residents/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <% @residents .each do |resident| %>
     <li>
-      <%= resident.appartm %> <%= resident.lastname %> <%= resident.name %> <%= resident.surname %> <%= resident.telephone %> <%= resident.birthday %> <%= resident.owner %> <%= resident.tenant %> <%= resident.appartment_id %>
+      <%= link_to resident.id, resident %> <%= resident.appartm %> <%= resident.lastname %> <%= resident.name %> <%= resident.surname %> <%= resident.telephone %> <%= resident.birthday %> <%= resident.owner %> <%= resident.tenant %> <%= resident.appartment_id %>
     </li>
   <% end %>
 </ul>
