--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
               <li class="nav-item active"><span class="link"> <%= link_to "Мешканці ", residents_path %></span> </li>
-              <li class="nav-item active"><span class="link"> <%= link_to "Квартири", appartments_path %></span> </li>
+              <li class="nav-item active"><span class="link"> <%= link_to "Квартири", apartments_path %></span> </li>
               <li class="nav-item active"><span class="nav-link"> <%= link_to " Увійти", login_path %></span> </li>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 
