Add create aprtmnt

--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Квартири</h1>
 
-<h6> № площа сплачено:вода сплачено:електроенергія показник:вода показник:електроенергія  Борг</h6>
+<h6> № площа сплачено:вода сплачено:електроенергія показник:вода показник:електроенергія  баланс</h6>
 <ul>
   <% @apartments .each do |apartment| %>
     <li>
