--- a/app/views/residents/edit.html.erb
+++ b/app/views/residents/edit.html.erb
@@ -1,3 +1,5 @@
-<h1></h1>
+<h5><%= @resident.lastname%> <%=@resident.name[0]%>. <%=@resident.surname[0]%>.</h5>
+<br>
+<br>
 
 <%= render 'residents/form' %>
