--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -1,6 +1,9 @@
+<br>
+<br>
+
 <caption>Квартири</caption>
-<table width="200" bgcolor="#c0c0c0" cellspacing="0" cellpadding="5" border="1" >
-  <tr>
+<table width="200"  cellspacing="0" cellpadding="5" border="1" >
+  <tr bgcolor="#c0c0c0">
     <th> №  </th>
     <th> площа  </th>
     <th> сплачено:вода  </th>
@@ -25,6 +28,6 @@
   </tr>
 
 </table>
-
+<br>
 <%= link_to "Додати квартиру", new_apartment_path %>
 
