--- a/app/views/residents/show.html.erb
+++ b/app/views/residents/show.html.erb
@@ -2,7 +2,7 @@
 <p></p>
 <p></p>
 <p></p>
-<h4><%= @resident.lastname%> <%=@resident.name[0]%>. <%=@resident.surname[0]%></h4>
+<h4><%= @resident.lastname%> <%=@resident.name[0]%>. <%=@resident.surname[0]%>.</h4>
 <br>
 <br>
 <br>
