--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -6,8 +6,7 @@
   <tr bgcolor="#c0c0c0">
     <th> №  </th>
     <th> площа  </th>
-    <th> сплачено:вода  </th>
-    <th> сплачено:електроенергія  </th>
+    <th> опалення </th>
     <th> показник:вода  </th>
     <th> показник:електроенергія  </th>
     <th> баланс  </th>
@@ -18,10 +17,9 @@
   <tr>
     <td><%= link_to apartment.apartment_number, apartment %></td>
     <td><%= apartment.apartment_area %></td>
-    <td><%= apartment.water_is_paid %></td>
-    <td><%= apartment.electricity_is_paid %></td>
-    <td><%= apartment.current_meters_water%></td>
-    <td><%= apartment.current_meter_electricity%></td>
+    <td><%= apartment.heating_counter %></td>
+    <td><%= apartment.water_counter%></td>
+    <td><%= apartment.electricity_counter%></td>
       <td><%= apartment.arrears%></td>
 
     <% end %>
