--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,9 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
