--- a/app/views/residents/show.html.erb
+++ b/app/views/residents/show.html.erb
@@ -8,8 +8,8 @@
 <br>
 <br>
 
-<table width="200" bgcolor="#c0c0c0" cellspacing="0" cellpadding="5" border="2" >
-  <tr :hover  background= " #d5e6a2" >
+<table width="200"  cellspacing="0" cellpadding="5" border="1"  >
+  <tr bgcolor="#c0c0c0" >
       <th > №квартири </th>
       <th> Прізвище  </th>
       <th> Ім'я  </th>
@@ -18,6 +18,8 @@
       <th> День народження  </th>
       <th> Власник   </th>
       <th> Орендар   </th>
+      <th></th>
+      <th></th>
   </tr>
 
   <tr>
