--- a/app/views/apartments/_form.html.erb
+++ b/app/views/apartments/_form.html.erb
@@ -31,6 +31,16 @@
   </div>
 
   <div>
+    <%= form.label :'Новий пароль' %><br>
+    <%= form.password_field(:password,{:class => 'form-control'})%><br>
+  </div>
+
+  <div>
+    <%= form.label :'Підтвердити новий пароль' %><br>
+    <%= form.password_field(:password_confirmation,{:class => 'form-control'})%><br>
+  </div>
+
+  <div>
     <%= form.submit ({:class => 'btn btn-success'})%>
   </div>
 
