--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,19 +36,32 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
               <li class="nav-item active"><span class="nav-link"> <%= link_to  " Admin  ", apartments_path %></span> </li>
-              <li class="nav-item active"><span class="nav-link"> <%= link_to " Вхід", login_path %></span> </li>
-              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 
-              </div>
+              <% if logged_in? %>
+                <li class="nav-item active"><span class="nav-link"> <%= link_to "Профіль", current_apartment %></span></li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to "Зміна паролю", edit_apartment_path(current_apartment) %>
+                  <div class="dropdown-divider"></div>
+                  <%= link_to "Вихід", logout_path, method: "delete" %>
+                </div>
               </li>
+              <% else %>
+                <li><%= link_to " Вхід", login_path %></li>
+              <% end %>
             </ul>
           </div>
         </div>
       </nav>
       <!-- Page content-->
       <div class="container">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
         <p><%= yield %></p>
         -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+        <%= debug(params) if Rails.env.development? %>
         <p>
 
       </div>
