--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="assets/application.css" rel="stylesheet" />
+    <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link href="assets/application.css" rel="stylesheet" />-->
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>"
   </head>
@@ -69,7 +69,7 @@
   </div>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
+  <!-- Core theme JS
   <script src="assets/scripts.js"></script>
 
   </body>
