--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,16 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-              <li class="nav-item active"><span class="nav-link"> <%= link_to  " Admin  ", apartments_path %></span> </li>
 
               <% if logged_in? %>
-                <li class="nav-item active"><span class="nav-link"> <%= link_to "Профіль", current_apartment %></span></li>
+                <% if current_apartment.admin?  %>
+                  <li class="nav-item active">
+                    <span class="nav-link"><%= link_to  " Адміністратор ", apartments_path %></span>
+                  </li>
+                <% end %>
+
+
+                <li class="nav-item active"><span class="nav-link"> <%= link_to "Моя квартира", current_apartment %></span></li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
