--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -5,11 +5,11 @@
 <table width="200"  cellspacing="0" cellpadding="5" border="1" >
   <tr bgcolor="#c0c0c0">
     <th> №  </th>
-    <th> площа  </th>
-    <th> опалення </th>
-    <th> показник:вода  </th>
-    <th> показник:електроенергія  </th>
-    <th> баланс  </th>
+    <th> площа, м кв. </th>
+    <th> опалення, кКал</th>
+    <th> вода, м куб. </th>
+    <th> електроенергія, кВт/год  </th>
+    <th> баланс, грн  </th>
   </tr>
 
     <% @apartments .each do |apartment| %>
