--- a/app/views/residents/new.html.erb
+++ b/app/views/residents/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Додати мешканця</h1>
+<h1>Додати мешканця до квартири № <%=@apartment.apartment_number%></h1>
 
-<%= render "form", resident: @resident %>
+<%= render "form", resident: @resident, mode: 'new' %>
 
