--- a/app/views/residents/edit.html.erb
+++ b/app/views/residents/edit.html.erb
@@ -1,5 +1,8 @@
-<h4><%= @resident.lastname%> <%=@resident.name[0]%>. <%=@resident.surname[0]%>.</h4>
+<h4> Квартира № <%= @apartment.apartment_number %></h4>
+<br>
+<h5><%= @resident.lastname%> <%=@resident.name[0]%>. <%=@resident.surname[0]%>.</h5>
+
 <br>
 <br>
 
-<%= render 'residents/form' %>
+<%= render 'residents/form', mode: 'edit' %>
