--- a/app/views/residents/show.html.erb
+++ b/app/views/residents/show.html.erb
@@ -2,13 +2,13 @@
 <p></p>
 <p></p>
 <p></p>
-<h4><%= @resident.lastname%> <%=@resident.name[0]%>. <%=@resident.surname[0]%></h4>
+<h4><%= @resident.lastname%> <%=@resident.name[0]%>. <%=@resident.surname[0]%>.</h4>
 <br>
 <br>
 <br>
 <br>
 
-<table width="200"  cellspacing="0" cellpadding="5" border="2" >
+<table width="200"  cellspacing="2" cellpadding="4" border="2" >
   <tr bgcolor="#c0c0c0" >
       <th > №квартири </th>
       <th> Прізвище  </th>
