--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <%= link_to "Зміна паролю", edit_apartment_path(current_apartment) %>
+                <%= link_to "Змінити пароль", edit_apartment_path(current_apartment) %>
                   <div class="dropdown-divider"></div>
                   <%= link_to "Вихід", logout_path, method: "delete" %>
                 </div>
