--- a/app/views/water_counters/show.html.erb
+++ b/app/views/water_counters/show.html.erb
@@ -11,13 +11,18 @@
       <th> Показник  </th>
       <th></th>
       <th></th>
+      <th></th>
   </tr>
-
+  <%= form_with model: [@apartment, @water_counter] do |form| %>
   <tr>
+    <td><div ><%= form.number_field(:value,{:size => 7,method: :patch})%></td></div>
+    <td> <%= form.submit  ({:class => 'btn btn-success', :value => 'Зберегти'})%></td>
+    <% end %>
 
-    <td><%= link_to @water_counter.value, edit_apartment_water_counter_path(@apartment, water_counter: @water_counter)%></td>
+
     <% if current_apartment.admin?  %>
-    <td><%= link_to ' Видалити', apartment_water_counter_path(@apartment, water_counter: @water_counter),
+      <td><%= link_to  'Змінити',edit_apartment_water_counter_path(@apartment, water_counter: @water_counter)%></td>
+      <td><%= link_to ' Видалити', apartment_water_counter_path(@apartment, water_counter: @water_counter),
                     method: :delete,
                     data: { confirm: "Ви впевнені?" } %></td>
     <% end %>
