Fix show lastname in apartments list

--- a/app/views/apartments/_form.html.erb
+++ b/app/views/apartments/_form.html.erb
@@ -12,6 +12,10 @@
     <%= form.number_field :apartment_area, in:25.0..150.0, hidden: mode == 'edit'%><br>
   </div>
 
+    <div>
+
+    </div>
+
     <% end %>
 
   <div>
