--- a/app/views/apartments/show.html.erb
+++ b/app/views/apartments/show.html.erb
@@ -19,7 +19,7 @@
     <th></th>
     <th></th>
   </tr>
-  <tr>
+  <tr  align="center">
     <td><%= @apartment.apartment_area %></td>
     <!--Count only owner family without tenant(necessary to pay for garbage removal)-->
     <td><%= @apartment.residents.where(:tenant => false ).count %></td>
