--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Osbb</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>OSBB TKZ-6</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
