--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,16 @@
   <head>
     <title>OSBB TKZ-6</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link href="assets/styles.css" rel="stylesheet" />-->
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="assets/application.css" rel="stylesheet" />-->
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>"
+
   </head>
 
-  <body>
+  <body >
   <div class="d-flex" id="wrapper">
     <!-- Sidebar-->
     <div class="border-end bg-white" id="sidebar-wrapper">
@@ -21,9 +22,6 @@
         <span class="list-group-item list-group-item-action list-group-item-light p-3"> <%= link_to "Про нас", documents_path %></span>
         <span class="list-group-item list-group-item-action list-group-item-light p-3"> <%= link_to 'Дошка оголошень', articles_path %></span>
         <span class="list-group-item list-group-item-action list-group-item-light p-3"> <%= link_to "Відеонагляд", video_path %></span>
-
-        <!--        <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Profile</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">Status</a>     -->
       </div>
     </div>
     <!-- Page content wrapper-->
@@ -32,7 +30,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
         <div class="container-fluid">
           <button class="btn btn-primary" id="sidebarToggle">Меню</button>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
 
@@ -74,8 +72,8 @@
   </div>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS
-  <script src="assets/scripts.js"></script>
+  <!-- Core theme JS ->
+  <script src="assets/scripts.js"></script>-->
 
   </body>
 </html>
