Show Lastname owner in appartment list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,7 @@
   <head>
     <title>OSBB TKZ-6</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="assets/styles.css" rel="stylesheet" />-->
+    <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />-->
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
@@ -72,8 +71,7 @@
   </div>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS ->
-  <script src="assets/scripts.js"></script>-->
+
 
   </body>
 </html>
