Show Lastname owner in appartment list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,11 @@
   <head>
     <title>OSBB TKZ-6</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="assets/styles.css" rel="stylesheet" />-->
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />-->
+    <%= stylesheet_link_tag    "application"%>
+    <%= javascript_include_tag "application"%>
 
   </head>
 
